--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
-    width: 450px;
+    width: 550px;
     margin: 0 auto;
-    padding: 20px 20px 20px 20px;
+    padding: 10px 20px 20px 20px;
     border: 5px solid black;
     text-align: center;
   }
@@ -15,4 +15,10 @@ img {
 button {
     width: 50px;
     height: 50px;
-    border-radius: 50%;}
+    border-radius: 50%;
+    object-fit: cover;}
+    
+
+input {
+  text-align: center;
+}
